--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Force include 'lib' folder
+!lib/
+# Optional: Force include subfolders inside 'lib' if needed
+!lib/**
+
 # User-specific files
 *.rsuser
 *.suo
